--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <div class="hero-content">
       <h1>Shaping Bright Minds with Faith & Knowledge</h1>
       <p>At Bait An Noor, children explore the beauty of Faith through joyful online learning where character, values, and understanding grow hand in hand.</p>
-      <br><button class="explore-btn">Register Now</button>
+      <br><a href="https://wa.me/917356276386" class="explore-btn" target="_blank">Register Now</a>
   </div>
 
   <div class="hero-image">
