--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   </div>
 
   <div class="hero-image">
-      <img src="images/quran.png" alt="Quran image" />
+      <img src="images/quran.webp" alt="Quran image" />
   </div> 
 
 </section>
@@ -237,7 +237,7 @@
   <div class="container">
     <div data-aos="zoom-in" data-aos-duration="1000" class="about-content">
       <div class="logo">
-        <img src="images/bait_an_noor.png" alt="Bait An Noor Logo">
+        <img src="images/bait_an_noor.webp" alt="Bait An Noor Logo">
       </div>
       <div data-aos="fade-left" data-aos-duration="1000" class="about-text">
         <h1 class="section-title" >About Us</h1>
