--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
   <meta charset="UTF-8"><!-- supports a wide range of characters, including special symbols and non-English text.-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"><!---  controls the viewport settings for responsive design, ensuring the page scales well on different screen sizes.-->
   <meta name="description" content="Bait An Noor offers Islamic online courses for kids, including Quran, Arabic, and Islamic studies."><!--SEO-->
-  
 
   <title>BAIT AN NOOR</title>
-  <link rel="icon" href="images/bait_an_noor.png">
+  <link rel="icon" href="images/bait_an_noor.webp">
 
   <!--css files-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
