--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <!-- Logo & Title -->
         <div data-aos="fade-right" data-aos-duration="1000" class="col-10 col-lg-6 d-flex align-items-center">
-          <img src="images/bait_an_noor.png" alt="Bait An Noor Logo"x class="site-logo mr-2">
+          <img src="images/bait_an_noor.webp" alt="Bait An Noor Logo"x class="site-logo mr-2">
           <h3 id="name" class="mb-0">BAIT AN NOOR</h3>
         </div>
         <!--d-flex makes div a flex container--> 
