--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
 <section id="books" class="books-section">
   <h2 class="section-title">Books</h2>
-  <p class="books-subtitle">Explore our collection of thoughtfully curated Islamic books — some available for free download, others available for purchase.</p>
+  <p class="books-subtitle">Explore our collection of thoughtfully curated Islamic books — some available for free download, others available for purchase.</p><br>
 
   <div class="books-grid">
 
@@ -261,7 +261,7 @@
     <div data-aos="fade-up" data-aos-duration="1000"  class="book-card">
       <img src="images/image copy 4.png" alt="Book Title 2">
       <h3>Simple Seerah</h3>
-      <p>A powerful narrative-driven book exploring the Seerah of Prophet ﷺ</p>
+      <p>A powerful narrative-driven book exploring the Seerah of Prophet ﷺ</p><br>
       <a href="#" class="book-btn">Buy Now</a>
     </div>
 
@@ -269,7 +269,7 @@
     <div data-aos="fade-up" data-aos-duration="1000"  class="book-card">
       <img src="images/image copy 6.png" alt="Book Title 3">
       <h3>Fiqh Made Easy</h3>
-      <p>A guide for adults covering the essentials of everyday Islamic practice.</p>
+      <p>A guide for adults covering the essentials of everyday Islamic practice.</p><br>
       <a href="#" class="book-btn">Buy Now</a>
     </div>
 
@@ -290,13 +290,13 @@
   </svg>  
 </div>
 
-<section id="testimonials" class="testimonials-section pt-5 pb-5">
+<!--<section id="testimonials" class="testimonials-section pt-5 pb-5">
   <div class="container text-center">
     <h2 class="mb-4 section-title">What Parents Are Saying</h2>
     <p class="text-muted mb-5">Real stories from families who trust Bait An Noor</p>
 
     <div class="row">
-      <!-- Testimonial 1 -->
+       Testimonial 1
       <div data-aos="fade-left" data-aos-duration="60" class="col-lg-4 mb-4">
         <div class="testimonial-card p-4 ">
           <div class="quote-icon mb-3">❝</div>
@@ -305,7 +305,7 @@
         </div>
       </div>
 
-      <!-- Testimonial 2 -->
+      Testimonial 2 
       <div data-aos="fade-left" data-aos-duration="60" class="col-lg-4 mb-4">
         <div class="testimonial-card p-4 shadow-sm rounded">
           <div class="quote-icon mb-3">❝</div>
@@ -314,7 +314,7 @@
         </div>
       </div>
 
-      <!-- Testimonial 3 -->
+      <-- Testimonial 3 
       <div data-aos="fade-left" data-aos-duration="60" class="col-lg-4 mb-4">
         <div class="testimonial-card p-4 shadow-sm rounded">
           <div class="quote-icon mb-3">❝</div>
@@ -322,10 +322,32 @@
           <h6 class="mt-4 mb-0 font-weight-bold" style = "color: #D4AF37;" >– Zainab K.</h6>
         </div>
       </div>
-
-  
     </div>
   </div>
+</section>-->
+
+<section id="gallery">
+  
+  <h2 class="mb-4 section-title" style="text-align: center;">Gallery</h2>
+  <p class="text-muted mb-5" style="text-align: center;">Take a look at our gallery</p>
+
+  <div class="gallery-grid">
+    <div class="gallery-card">
+      <img src="images/images-3.jpeg" alt="Girls" loading="lazy">
+    </div>
+
+    <div class="gallery-card">
+      <img src="images/girls Background Removed.png" alt="Girls 2" loading="lazy">
+    </div>
+
+    <div class="gallery-card">
+      <img src="images/home2.jpg" alt="Unknown" loading="lazy">
+    </div>
+  
+  </div>
+
+  <br><br><br>
+  <a href="" class="explore-btn">View More</a>
 </section>
 
 
